cluster/manifests/mattermost/overlays/dev/gitlab-sso-bridge/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: gitlab-sso-bridge
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: gitlab-sso-bridge
  mtls:
    mode: STRICT
